--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
+        <title>Κουζίνα από Σπίτι - Χαλκίδα</title>
+        <meta name="description" content="Κουζίνα από Σπίτι, Χαλκίδα">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="css/normalize.min.css">
@@ -23,7 +23,20 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <div class="container">
+          <img src="/img/logo.png" alt="Κουζίνα από Σπίτι" class="logo">
+          <p class="intro">Κάθε μέρα μαγειρεύουμε υγιεινά, λαχταριστά πιάτα
+          για να μπορούν όλοι να απολαμβάνουν σπιτικό φαγητό</p>
+
+          <span class="btn-order" data-glf-cuid="99c407c2-9a73-4089-b6d4-82541c3af76a" data-glf-ruid="69051775-f3cc-40fb-b882-361ffa6c6b4f" data-glf-auto-open="false">ΠΑΡΑΓΓΕΛΙΑ ONLINE</span> 
+
+          <footer>
+            Διανομή κατ'οίκον Δευτέρα - Σάββατο 12:00 μ.μ. - 5:00 μ.μ.<br>
+            Παραγγελίες στα τηλέφωνα 22210 89077 και 6931 234081<br>
+            Χαϊνά 60 - Χαλκίδα
+          </footer>
+        <div>
+        <script src="https://www.foodbooking.com/widget/js/ewm2.js" defer async ></script>
 
         <script src="js/main.js"></script>
 
