--- a/index.html
+++ b/index.html
@@ -59,18 +59,28 @@
             Παραγγελίες στα τηλέφωνα 22210 89077 και 6931 234081<br>
             Χαϊνά 60 - Χαλκίδα
           </footer>
-        <div>
-        <script src="https://www.foodbooking.com/widget/js/ewm2.js" defer async ></script>
+        </div>
 
-        <script src="js/main.js"></script>
+        <div class="slideshow">
+          <div class="slide-1"></div>
+          <div class="slide-2"></div>
+          <div class="slide-3"></div>
+          <div class="slide-4"></div>
+          <div class="slide-5"></div>
+          <div class="slide-6"></div>
+        </div>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+          <script src="https://www.foodbooking.com/widget/js/ewm2.js" defer async ></script>
+
+          <script src="js/main.js"></script>
+
+          <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+          <script>
+(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+                                                        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+e.src='//www.google-analytics.com/analytics.js';
+r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-54447212-8','auto');ga('send','pageview');
         </script>
     </body>
