--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
           <span class="btn-order" data-glf-cuid="99c407c2-9a73-4089-b6d4-82541c3af76a" data-glf-ruid="69051775-f3cc-40fb-b882-361ffa6c6b4f" data-glf-auto-open="false">ΠΑΡΑΓΓΕΛΙΑ ONLINE</span> 
 
           <footer>
-            Διανομή κατ'οίκον Δευτέρα - Σάββατο 12:00 μ.μ. - 5:00 μ.μ.<br>
-            Παραγγελίες στα τηλέφωνα 22210 89077 και 6931 234081<br>
+            Διανομή κατ'οίκον
+            <span class="nowrap">Δευτέρα - Σάββατο 12:00 μ.μ. - 5:00 μ.μ.</span><br>
+            Τηλεφωνικές παραγγελίες
+            <span class="nowrap">22210 89077 και 6931 234081</span><br>
             Χαϊνά 60 - Χαλκίδα
           </footer>
         </div>
