update landing page

--- a/index.html
+++ b/index.html
@@ -37,8 +37,30 @@
         <meta name="msapplication-config" content="/favicons/browserconfig.xml?v=NmmyYBJnj2">
         <meta name="theme-color" content="#000000">
 
+        <!-- facebook preview --> 
+        <meta property="og:url"           content="http://kouzinaapospiti.gr" />
+        <meta property="og:type"          content="website" />
+        <meta property="og:title"         content="Κουζίνα από Σπίτι" />
+        <meta property="og:description"   content="Κάθε μέρα μαγειρεύουμε υγιεινά, λαχταριστά πιάτα για να μπορούν όλοι να απολαμβάνουν σπιτικό φαγητό." />
+        <meta property="og:image"         content="http://kouzinaapospiti.gr/img/26113747930_686f33bed2_k.jpg" />
+
+        <!-- Facebook Pixel Code -->
+        <script>
+          !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+          n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
+          n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
+          t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
+          document,'script','https://connect.facebook.net/en_US/fbevents.js');
+
+          fbq('init', '643826932436390');
+          fbq('track', "PageView");</script>
+        <noscript><img height="1" width="1" style="display:none"
+          src="https://www.facebook.com/tr?id=643826932436390&ev=PageView&noscript=1"
+          /></noscript>
+        <!-- End Facebook Pixel Code -->
+
         <!--[if lt IE 9]>
-            <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
             <script>window.html5 || document.write('<script src="js/vendor/html5shiv.js"><\/script>')</script>
         <![endif]-->
     </head>
@@ -49,12 +71,22 @@
 
         <div class="container">
           <img src="/img/logo.png" alt="Κουζίνα από Σπίτι" class="logo">
+          <!--
           <p class="intro">Κάθε μέρα μαγειρεύουμε υγιεινά, λαχταριστά πιάτα
-          για να μπορούν όλοι να απολαμβάνουν σπιτικό φαγητό</p>
+            για να μπορούν όλοι να απολαμβάνουν σπιτικό φαγητό</p>
+          -->
 
           <span class="btn-order" data-glf-cuid="99c407c2-9a73-4089-b6d4-82541c3af76a" data-glf-ruid="69051775-f3cc-40fb-b882-361ffa6c6b4f" data-glf-auto-open="false">ΠΑΡΑΓΓΕΛΙΑ ONLINE</span> 
 
           <footer>
+            <p class="app-stores">
+              <a href="https://www.facebook.com/kouzinaapospiti/" trget="_blank">
+                <img src="/img/fb.png" alt="Like our page on Facebook">
+              </a>
+              <a href="https://play.google.com/store/apps/details?id=com.shopilab.kouzinaapospiti" target="_blank">
+                <img src="/img/google-play-badge-el.png" alt="Google PLay">
+              </a>
+            </p>
             Διανομή κατ'οίκον
             <span class="nowrap">Δευτέρα - Σάββατο 12:00 μ.μ. - 5:00 μ.μ.</span><br>
             Τηλεφωνικές παραγγελίες
@@ -69,7 +101,6 @@
           <div class="slide-3"></div>
           <div class="slide-4"></div>
           <div class="slide-5"></div>
-          <div class="slide-6"></div>
         </div>
 
           <script src="https://www.foodbooking.com/widget/js/ewm2.js" defer async></script>
