--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
           <footer>
             <p class="app-stores">
-              <a href="https://www.facebook.com/kouzinaapospiti/" trget="_blank">
+              <a href="https://www.facebook.com/kouzinaapospiti/" target="_blank">
                 <img src="/img/fb.png" alt="Like our page on Facebook">
               </a>
               <a href="https://play.google.com/store/apps/details?id=com.shopilab.kouzinaapospiti" target="_blank">
