--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
               <div class="img1"></div>
               <div class="img3"></div>
               <div class="img5"></div>
-              <div class="img6"></div>
               <div class="img8"></div>
-              <div class="img9"></div>
-              <div class="img11"></div>
+              <div class="img13"></div>
+              <div class="img14"></div>
+              <div class="img15"></div>
             </div>
             <img src="/img/logo.png" alt="Κουζίνα από Σπίτι" class="logo">
             <span class="btn-order" data-glf-cuid="99c407c2-9a73-4089-b6d4-82541c3af76a" data-glf-ruid="69051775-f3cc-40fb-b882-361ffa6c6b4f" data-glf-auto-open="false">ΠΑΡΑΓΓΕΛΙΑ ONLINE</span>
@@ -65,19 +65,26 @@
             <div class="img6"></div>
             <div class="img7"></div>
             <div class="img8"></div>
-            <div class="img9"></div>
-            <div class="img10"></div>
-            <div class="img11"></div>
-            <div class="img12"></div>
           </div>
 
           <div class="text2">
             <p>
               Το ρεπερτόριό μας είναι αρκετά μεγάλο!<br>
-              Για να δείτε τι από τα παρακάτω υπάρχει διαθέσιμο τώρα,<br>
+              Για να δείτε τι από τα παρακάτω υπάρχει διαθέσιμο τώρα,
               <span class="btn-order2" data-glf-cuid="99c407c2-9a73-4089-b6d4-82541c3af76a" data-glf-ruid="69051775-f3cc-40fb-b882-361ffa6c6b4f" data-glf-auto-open="false">ανοίξτε τον κατάλογο</span>
-              <br>για τις online παραγγελίες!
+              για τις online παραγγελίες!
             </p>
+          </div>
+
+          <div class="photos">
+            <div class="img9"></div>
+            <div class="img10"></div>
+            <div class="img11"></div>
+            <div class="img12"></div>
+            <div class="img13"></div>
+            <div class="img14"></div>
+            <div class="img15"></div>
+            <div class="img16"></div>
           </div>
 
           {% include menu.html %}
