--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <div class="img3"></div>
               <div class="img5"></div>
               <div class="img8"></div>
-              <div class="img13"></div>
+              <div class="img9"></div>
               <div class="img14"></div>
               <div class="img15"></div>
             </div>
@@ -88,6 +88,7 @@
           </div>
 
           {% include menu.html %}
+          {% include map.html %}
           {% include footer.html %}
         <!-- </div> -->
 
