--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             με φρεσκότατα υλικά ημέρας</p>
           </div>
 
-          <div class="photos">
+          <div class="photos hidden-sm-down">
             <div class="img1"></div>
             <div class="img2"></div>
             <div class="img3"></div>
@@ -77,7 +77,7 @@
             </p>
           </div>
 
-          <div class="photos">
+          <div class="photos hidden-sm-down">
             <div class="img9"></div>
             <div class="img10"></div>
             <div class="img11"></div>
