--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
     </head>
     <body>
         <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+          <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+
+        <a href="https://www.facebook.com/events/178182609334029/" target="_blank" class="special"></a>
 
         <!-- <div class="container"> -->
         <div class="text-top">
