--- a/index.html
+++ b/index.html
@@ -2,79 +2,80 @@
 ---
 
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Κουζίνα από Σπίτι - Χαλκίδα</title>
-        <meta name="description" content="Κουζίνα από Σπίτι, Χαλκίδα">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""><![endif]-->
+<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8" lang=""><![endif]-->
+<!--[if IE 8]><html class="no-js lt-ie9" lang=""><![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js" lang=""><!--<![endif]-->
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Κουζίνα από Σπίτι - Χαλκίδα</title>
+    <meta name="description" content="Κουζίνα από Σπίτι, Χαλκίδα">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="/css/normalize.min.css">
-        <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/normalize.min.css">
+    <link rel="stylesheet" href="/css/main.css">
 
-        {% include favicon.html %}
-        {% include facebook.html %}
+    {% include favicon.html %}
+    {% include facebook.html %}
 
-        <!--[if lt IE 9]>
-        <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-            <script>window.html5 || document.write('<script src="js/vendor/html5shiv.js"><\/script>')</script>
-        <![endif]-->
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-          <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <script>window.html5 || document.write('<script src="js/vendor/html5shiv.js"><\/script>')</script>
+    <![endif]-->
+  </head>
+  <body>
+    <!--[if lt IE 8]>
+      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
 
-        <div class="container">
+    <div class="container">
 
-          <header>
-            <div class="row">
-              <div class="col-md-6">
-                <img src="/img/logo.svg" alt="Κουζίνα από Σπίτι" class="logo">
-              </div>
-              <div class="col-md-6">
-                <span class="btn-order" data-glf-cuid="99c407c2-9a73-4089-b6d4-82541c3af76a" data-glf-ruid="69051775-f3cc-40fb-b882-361ffa6c6b4f" data-glf-auto-open="false">
-                  <span class="small">πατήστε εδώ για να δείτε τι υπάρχει διαθέσιμο από αυτά που μαγειρέψαμε σήμερα και να κάνετε</span>
-                  <span>ΠΑΡΑΓΓΕΛΙΑ ONLINE</span>
-                </span>
-              </div>
-            </div>
-          </header>
-
-          <div class="intro">
-            <div class="slider">
-              <div class="img1"></div>
-              <div class="img3"></div>
-              <div class="img5"></div>
-              <div class="img8"></div>
-              <div class="img9"></div>
-              <div class="img14"></div>
-              <div class="img15"></div>
-            </div>
+      <header>
+        <div class="row">
+          <div class="col-md-6">
+            <img src="/img/logo.svg" alt="Κουζίνα από Σπίτι" class="logo">
           </div>
-
-          <div class="text-top">
-            Διανομή κατ'οίκον
-            <span class="nowrap">Δευτέρα - Σάββατο 12:00 μ.μ. - 6:00 μ.μ.</span><br>
-            Τηλεφωνικές παραγγελίες
-            <span class="nowrap">22210 89077 και 6931 234081</span><br>
-            Χαϊνά 60 - Χαλκίδα
+          <div class="col-md-6">
+            <span class="btn-order" data-glf-cuid="99c407c2-9a73-4089-b6d4-82541c3af76a" data-glf-ruid="69051775-f3cc-40fb-b882-361ffa6c6b4f" data-glf-auto-open="false">
+              <span class="small">πατήστε εδώ για να δείτε τι υπάρχει διαθέσιμο από αυτά που μαγειρέψαμε σήμερα και να κάνετε</span>
+              <span>ΠΑΡΑΓΓΕΛΙΑ ONLINE</span>
+            </span>
           </div>
-
-          {% include map.html %}
-          {% include footer.html %}
         </div>
+      </header>
 
-        <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-        <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-        <script src="/js/vendor/slick.min.js"></script>
-        <script src="/js/main.js"></script>
-        <script src="https://www.foodbooking.com/widget/js/ewm2.js" defer async></script>
+      <div class="intro">
+        <div class="slider">
+          <div class="img1"></div>
+          <div class="img3"></div>
+          <div class="img5"></div>
+          <div class="img8"></div>
+          <div class="img14"></div>
+          <div class="img15"></div>
+        </div>
+      </div>
 
-        {% include analytics.html %}
-    </body>
+      <div class="text-top">
+        Διανομή κατ'οίκον
+        <span class="nowrap">Δευτέρα - Σάββατο</span>
+        <span class="nowrap">12:00 μ.μ. - 6:00 μ.μ.</span><br>
+        <span class="nowrap">Τηλεφωνικές παραγγελίες</span>
+        <span class="nowrap">22210 89077</span> και
+        <span class="nowrap">6931 234081</span><br>
+        <span class="nowrap">Χαϊνά 60 - Χαλκίδα</span>
+      </div>
+
+      {% include map.html %}
+      {% include footer.html %}
+    </div>
+
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="/js/vendor/slick.min.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="https://www.foodbooking.com/widget/js/ewm2.js" defer async></script>
+
+    {% include analytics.html %}
+  </body>
 </html>
