fix issues in small screens

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </header>
 
       <div class="intro">
-        <div class="slider">
+        <div class="slider hidden-xs-down">
           <div class="img1"></div>
           <div class="img3"></div>
           <div class="img5"></div>
