--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="text-top">
         Διανομή κατ'οίκον
         <span class="nowrap">Δευτέρα - Σάββατο</span>
-        <span class="nowrap">12:00 μ.μ. - 6:00 μ.μ.</span><br>
+        <span class="nowrap">12:00 - 6:00 μ.μ.</span><br>
         <span class="nowrap">Τηλεφωνικές παραγγελίες</span>
         <span class="nowrap">22210 89077</span> και
         <span class="nowrap">6931 234081</span><br>
